# statuspulse

./: Cargo.toml  Dockerfile  README.md  nixpacks.toml
migrations/: 01_create_core_schema.sql
src/: main.rs
src/db/: alert_sent_repository.rs  mod.rs  monitor_repository.rs  status_log_repository.rs  user_repository.rs
src/handlers/: auth_handler.rs  axum_handler.rs  change_password.rs  checkout_handler.rs  lemon_webhook_handler.rs  mod.rs  monitor_handler.rs  status_log_handler.rs
src/models/: alert_sent.rs  mod.rs  monitor.rs  status_log.rs  user.rs
src/routes/: lemon_routes.rs  mod.rs  monitor_routes.rs
src/services/: auth_service.rs  mod.rs  sendgrid_service.rs  worker.rs
src/services/email_templates/: email_monitor_up.html  email_password_changed.html  email_password_reset.html  email_registration.html  monitor_down.html
src/templates/: base.html  change_password.html  create_monitor.html  dashboard.html  edit_monitor.html  error.html  error_500.html  forgot_password.html  index.html  index2.html  login.html  monitor_logs.html  register.html  reset_password.html
src/utils/: datetime.rs  flash.rs  jwt_auth.rs  mod.rs
static/: robots.txt
templates/: base.html  create_monitor.html  edit_monitor.html  error.html  error_500.html  index.html  register.html
