[package]
name = "statuspulse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
argon2 = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tera = "1.19"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"

# Dodaj ovo:
hyper = { version = "1.0", features = ["full"] }
