[package]
name = "statuspulse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
headers = "0.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "migrate", "time"] }
time = { version = "0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
argon2 = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tera = "1.19.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"

bcrypt = "0.15"
hyper = { version = "1.0", features = ["full"] }
rand_core = "0.6.4"
futures = "0.3"
sendgrid = { version = "0.11", features = ["async"] }
urlencoding = "2.1.3"
thiserror = "2.0.12"
tower-http = { version = "0.5", features = ["fs"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
