[package]
name = "statuspulse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
headers = "0.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "migrate", "time"] }
time = { version = "0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
argon2 = "0.5"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tera = "1.19.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand = "0.8"
bcrypt = "0.15"
hyper = { version = "1.0", features = ["full"] }
rand_core = "0.6.4"
futures = "0.3"
sendgrid = { version = "0.11", features = ["async"] }
urlencoding = "2.1.3"
thiserror = "2.0.12"
tower-http = { version = "0.5", features = ["fs"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
http = "1.3.1"
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }
base64 = "0.22.1"
anyhow = "1.0.98"
